[package]
name = "sfs-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sfs"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
atty = "0.2"
clap = { version = "4.1", features = ["derive"] }
env_logger = { version = "0.10", default-features = false }
indexmap = "1.9"
log = "0.4"
noodles-bcf = "0.21"
noodles-bgzf = "0.20"
noodles-vcf = "0.25"
sfs = { path = "../sfs" }

[dev-dependencies]
trycmd = "0.14"
