[package]
name = "sfs-cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
license = "MIT"
authors = ["Malthe Sebro Rasmussen"]
description = "Tools for working with site frequency spectra"
homepage = "https://github.com/malthesr/sfs"
repository = "https://github.com/malthesr/sfs"

[[bin]]
name = "sfs"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
env_logger = { version = "0.10", default-features = false }
log = "0.4"
sfs-core = { version = "0.1", path = "../core" }

[dev-dependencies]
trycmd = "0.14"
