[package]
name = "sfs-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
license = "MIT"
authors = ["Malthe Sebro Rasmussen"]
description = "Core implementation of tools for working with site frequency spectra"
homepage = "https://github.com/malthesr/sfs"
repository = "https://github.com/malthesr/sfs"

[dependencies]
flate2 = "1"
indexmap = "2"
nom = "7"
noodles-bcf = "0.32"
noodles-bgzf = "0.22"
noodles-vcf = "0.35"
